--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
+    <title>JavaScript ES6 practice</title>
   </head>
   <body>
-    
+    asd
   </body>
   <script src="./js/script.js"></script>
 </html>
